--- a/main.html
+++ b/main.html
@@ -8,8 +8,51 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<header>
+		<h1 align="center">The Conjuring 2</h1>
+		<nav>
+			<ul >
+				<li><a href="">actor</a></li>
+				<li><a href="">quote</a></li>
+			</ul>
+		</nav>
+	</header>
+	<center><img src="https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_.jpg"
+	srcset="https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_FMjpg_UY474_.jpg 319w, https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_FMjpg_UY711_.jpg 479w, https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_FMjpg_UY337_.jpg 227w, https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_FMjpg_UY576_.jpg 388w, https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_FMjpg_UY720_.jpg 485w, https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_.jpg 1280w"
+		alt="The Conjuring 2 (2016)" width="15%"></center>
+	<summary>
+		<h3 align="center">Movie plot :</h3>
+		<p>In 1977, paranormal investigators Ed and Lorraine Warren travel to London, England, where single mother Peggy
+			Hodgson believes that something evil is in her home. When Peggy's youngest daughter starts showing signs of
+			demonic possession, Ed and Lorraine attempt to help the besieged girl, only to find themselves targeted by
+			the malicious spirits.
+		</p>
+	</summary>
+	<section id="actor">
+		<h3 align="center">Actors</h3>
+		<ul>
+			<li>Vera Farmiga as:
+				Lorraine Warren</li>
+			<li>Patrick Wilson as:
+				Ed Warren</li>
+			<li>Madison Wolfe as:
+				Janet Hodgson(my favourite )</li>
+			<li>Frances O'Connor as:
+				Peggy Hodgson</li>
+			<li>Lauren Esposito as:
+				Margaret Hodgson</li>
+
+		</ul>
+	</section>
+	<section id="quote"></section>
+	<aside></aside>
+	<footer align="center">
+		<h3>Directed by:
+			&lt; James Wan &gt;</h3>
+		<h3>produced by:&lt; New Line Cinema &gt;</h3>
+	</footer>
+	<script type="text/javascript" src="./script.js">
+	</script>
 
 </body>
 
