--- a/main.html
+++ b/main.html
@@ -45,7 +45,13 @@
 		</ul>
 	</section>
 	<section id="quote"></section>
-	<aside></aside>
+	<aside><h2>IMDb RATING :
+		7.3/10
+	</h2>
+	<p>Release date:
+		June 10, 2016 (United States)
+		</p>
+	</aside>
 	<footer align="center">
 		<h3>Directed by:
 			&lt; James Wan &gt;</h3>
