--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
 			the malicious spirits.
 		</p>
 	</summary>
-	<section id="actor">
+	<section id="nav-actor">
 		<h3 align="center">Actors</h3>
 		<p><ul>
 			<li>Vera Farmiga as:
@@ -44,7 +44,7 @@
 				
 		</ul></p>
 	</section>
-	<section id="quote"></section>
+	<section id="nav-quote"></section>
 	<aside><h2>IMDb RATING :
 		7.3/10
 	</h2>
