--- a/main.html
+++ b/main.html
@@ -12,8 +12,8 @@
 		<h1 align="center">The Conjuring 2</h1>
 		<nav>
 			<ul >
-				<li><a href="">actor</a></li>
-				<li><a href="">quote</a></li>
+				<li id="nav-actors"><a href="">actor</a></li>
+				<li id="nav-quote"><a href="">quote</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -28,7 +28,7 @@
 			the malicious spirits.
 		</p>
 	</summary>
-	<section id="nav-actor">
+	<section id="actor">
 		<h3 align="center">Actors</h3>
 		<p><ul>
 			<li>Vera Farmiga as:
@@ -44,7 +44,7 @@
 				
 		</ul></p>
 	</section>
-	<section id="nav-quote"></section>
+	<section id="quote"></section>
 	<aside><h2>IMDb RATING :
 		7.3/10
 	</h2>
