--- a/main.html
+++ b/main.html
@@ -12,8 +12,8 @@
 		<h1 align="center">The Conjuring 2</h1>
 		<nav>
 			<ul >
-				<li id="nav-actors"><a href="">actor</a></li>
-				<li id="nav-quote"><a href="">quote</a></li>
+				<li ><a href="" id="nav-actor">actor</a></li>
+				<li ><a href=""id="nav-quote">quote</a></li>
 			</ul>
 		</nav>
 	</header>
