--- a/main.html
+++ b/main.html
@@ -11,10 +11,9 @@
 	<header>
 		<h1 align="center">The Conjuring 2</h1>
 		<nav>
-			<ul >
-				<li ><a href="" id="nav-actor">actor</a></li>
-				<li ><a href=""id="nav-quote">quote</a></li>
-			</ul>
+		
+				<a href="" id="nav-actor">actor</a>
+				<a href=""id="nav-quote">quote</a>
 		</nav>
 	</header>
 	<center><img src="https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_.jpg"
