--- a/main.html
+++ b/main.html
@@ -12,24 +12,22 @@
 		<h1 align="center">The Conjuring 2</h1>
 	</header>
 	<nav>
-	
-			<a href="" id="nav-actor">actor</a>
-			<a href=""id="nav-quote">quote</a>
+
+		<a href="" id="nav-actor">actor</a>
+		<a href="" id="nav-quote">quote</a>
 	</nav>
-	<center><img src="https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_.jpg"
-	srcset="https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_FMjpg_UY474_.jpg 319w, https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_FMjpg_UY711_.jpg 479w, https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_FMjpg_UY337_.jpg 227w, https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_FMjpg_UY576_.jpg 388w, https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_FMjpg_UY720_.jpg 485w, https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_.jpg 1280w"
-		alt="The Conjuring 2 (2016)" width="15%"></center>
+	<center><img
+			src="https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_.jpg"
+			srcset="https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_FMjpg_UY474_.jpg 319w, https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_FMjpg_UY711_.jpg 479w, https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_FMjpg_UY337_.jpg 227w, https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_FMjpg_UY576_.jpg 388w, https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_FMjpg_UY720_.jpg 485w, https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_.jpg 1280w"
+			alt="The Conjuring 2 (2016)" width="15%"></center>
 	<summary>
-		<h3 align="center">Movie plot :</h3>
-		<p>In 1977, paranormal investigators Ed and Lorraine Warren travel to London, England, where single mother Peggy
-			Hodgson believes that something evil is in her home. When Peggy's youngest daughter starts showing signs of
-			demonic possession, Ed and Lorraine attempt to help the besieged girl, only to find themselves targeted by
-			the malicious spirits.
+
 		</p>
 	</summary>
 	<section id="actor">
 		<h3 align="center">Actors</h3>
-		<p><ul>
+		<p>
+		<ul>
 			<li>Vera Farmiga as:
 				Lorraine Warren</li>
 			<li>Patrick Wilson as:
@@ -40,15 +38,23 @@
 				Peggy Hodgson</li>
 			<li>Lauren Esposito as:
 				Margaret Hodgson</li>
-				
-		</ul></p>
+
+		</ul>
+		</p>
 	</section>
-	<section id="quote"></section>
-	<aside><h2>IMDb RATING :
-		7.3/10
-	</h2>
-	<p>Release date:
-		June 10, 2016 (United States)
+	<section id="quote">
+		<h3 align="center">Movie plot :</h3>
+		<p>In 1977, paranormal investigators Ed and Lorraine Warren travel to London, England, where single mother Peggy
+			Hodgson believes that something evil is in her home. When Peggy's youngest daughter starts showing signs of
+			demonic possession, Ed and Lorraine attempt to help the besieged girl, only to find themselves targeted by
+			the malicious spirits.
+	</section>
+	<aside>
+		<h2>IMDb RATING :
+			7.3/10
+		</h2>
+		<p>Release date:
+			June 10, 2016 (United States)
 		</p>
 	</aside>
 	<footer align="center">
