--- a/main.html
+++ b/main.html
@@ -9,23 +9,20 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<header>
-		<h1 align="center">The Conjuring 2</h1>
+		<h1 >The Conjuring 2</h1>
 	</header>
 	<nav>
 
-		<a href="" id="nav-actor">actor</a>
-		<a href="" id="nav-quote">quote</a>
+		<a href="#actor" id="nav-actor">actor</a>
+		<a href="quote" id="nav-quote">quote</a>
 	</nav>
-	<center><img
-			src="https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_.jpg"
-			srcset="https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_FMjpg_UY474_.jpg 319w, https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_FMjpg_UY711_.jpg 479w, https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_FMjpg_UY337_.jpg 227w, https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_FMjpg_UY576_.jpg 388w, https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_FMjpg_UY720_.jpg 485w, https://m.media-amazon.com/images/M/MV5BZjU5OWVlN2EtODNlYy00MjhhLWI0MDUtMTA3MmQ5MGMwYTZmXkEyXkFqcGdeQXVyNjE5MTM4MzY@._V1_.jpg 1280w"
-			alt="The Conjuring 2 (2016)" width="15%"></center>
+	
 	<summary>
 
 		</p>
 	</summary>
 	<section id="actor">
-		<h3 align="center">Actors</h3>
+		<h3>Actors</h3>
 		<p>
 		<ul>
 			<li>Vera Farmiga as:
@@ -43,7 +40,7 @@
 		</p>
 	</section>
 	<section id="quote">
-		<h3 align="center">Movie plot :</h3>
+		<h3 >Movie plot :</h3>
 		<p>In 1977, paranormal investigators Ed and Lorraine Warren travel to London, England, where single mother Peggy
 			Hodgson believes that something evil is in her home. When Peggy's youngest daughter starts showing signs of
 			demonic possession, Ed and Lorraine attempt to help the besieged girl, only to find themselves targeted by
@@ -57,7 +54,7 @@
 			June 10, 2016 (United States)
 		</p>
 	</aside>
-	<footer align="center">
+	<footer >
 		<h3>Directed by:
 			&lt; James Wan &gt;</h3>
 		<h3>produced by:&lt; New Line Cinema &gt;</h3>
