--- a/main.html
+++ b/main.html
@@ -13,13 +13,15 @@
 	</header>
 	<nav>
 
-		<a href="#actor" id="nav-actor">actor</a>
-		<a href="quote" id="nav-quote">quote</a>
+		<a href="#actor" id="nav-actor">Actors</a>
+		<a href="quote" id="nav-quote">quotes</a>
 	</nav>
 	
 	<summary>
-
-		</p>
+		<p>In 1977, paranormal investigators Ed and Lorraine Warren travel to London, England, where single mother Peggy
+			Hodgson believes that something evil is in her home. When Peggy's youngest daughter starts showing signs of
+			demonic possession, Ed and Lorraine attempt to help the besieged girl, only to find themselves targeted by
+			the malicious spirits. </p>
 	</summary>
 	<section id="actor">
 		<h3>Actors</h3>
@@ -41,10 +43,7 @@
 	</section>
 	<section id="quote">
 		<h3 >Movie plot :</h3>
-		<p>In 1977, paranormal investigators Ed and Lorraine Warren travel to London, England, where single mother Peggy
-			Hodgson believes that something evil is in her home. When Peggy's youngest daughter starts showing signs of
-			demonic possession, Ed and Lorraine attempt to help the besieged girl, only to find themselves targeted by
-			the malicious spirits.
+		
 	</section>
 	<aside>
 		<h2>IMDb RATING :
@@ -55,9 +54,9 @@
 		</p>
 	</aside>
 	<footer >
-		<h3>Directed by:
-			&lt; James Wan &gt;</h3>
-		<h3>produced by:&lt; New Line Cinema &gt;</h3>
+		Directed by:
+			&lt; James Wan &gt;<br>
+		produced by:&lt; New Line Cinema &gt;
 	</footer>
 	<script type="text/javascript" src="./script.js">
 	</script>
