--- a/main.html
+++ b/main.html
@@ -54,9 +54,9 @@
 		</p>
 	</aside>
 	<footer >
-		Directed by:
+		<p>Directed by:
 			&lt; James Wan &gt;<br>
-		produced by:&lt; New Line Cinema &gt;
+		produced by:&lt; New Line Cinema &gt;</p>
 	</footer>
 	<script type="text/javascript" src="./script.js">
 	</script>
