--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<header>
-		<h1 >The Conjuring 2</h1>
+		The Conjuring 2
 	</header>
 	<nav>
 
@@ -24,7 +24,7 @@
 			the malicious spirits. </p>
 	</summary>
 	<section id="actor">
-		<h3>Actors</h3>
+		Actors
 		<p>
 		<ul>
 			<li>Vera Farmiga as:
@@ -42,13 +42,13 @@
 		</p>
 	</section>
 	<section id="quote">
-		<h3 >Movie plot :</h3>
+		<p  >Movie plot :</p>
 		
 	</section>
 	<aside>
-		<h2>IMDb RATING :
+		<p>IMDb RATING :
 			7.3/10
-		</h2>
+		</p>
 		<p>Release date:
 			June 10, 2016 (United States)
 		</p>
