--- a/main.html
+++ b/main.html
@@ -16,34 +16,28 @@
 		<a href="#actor" id="nav-actor">Actors</a>
 		<a href="quote" id="nav-quote">quotes</a>
 	</nav>
-	
+
 	<summary>
-		<p>In 1977, paranormal investigators Ed and Lorraine Warren travel to London, England, where single mother Peggy
-			Hodgson believes that something evil is in her home. When Peggy's youngest daughter starts showing signs of
-			demonic possession, Ed and Lorraine attempt to help the besieged girl, only to find themselves targeted by
-			the malicious spirits. </p>
+		In 1977, paranormal investigators Ed and Lorraine Warren travel to London, England, where single mother Peggy
+		Hodgson believes that something evil is in her home. When Peggy's youngest daughter starts showing signs of
+		demonic possession, Ed and Lorraine attempt to help the besieged girl, only to find themselves targeted by
+		the malicious spirits.
 	</summary>
 	<section id="actor">
-		Actors
-		<p>
-		<ul>
-			<li>Vera Farmiga as:
-				Lorraine Warren</li>
-			<li>Patrick Wilson as:
-				Ed Warren</li>
-			<li>Madison Wolfe as:
-				Janet Hodgson(my favourite )</li>
-			<li>Frances O'Connor as:
-				Peggy Hodgson</li>
-			<li>Lauren Esposito as:
-				Margaret Hodgson</li>
+		Actors: Vera Farmiga as:
+		Lorraine Warren,Patrick Wilson as:
+		Ed Warren
 
-		</ul>
-		</p>
+
+
 	</section>
 	<section id="quote">
-		<p  >Movie plot :</p>
-		
+		Movie plot : In 1977, paranormal investigators Ed and Lorraine Warren travel to London, England, where single
+		mother Peggy
+		Hodgson believes that something evil is in her home. When Peggy's youngest daughter starts showing signs of
+		demonic possession, Ed and Lorraine attempt to help the besieged girl, only to find themselves targeted by
+		the malicious spirits.
+
 	</section>
 	<aside>
 		<p>IMDb RATING :
@@ -53,10 +47,10 @@
 			June 10, 2016 (United States)
 		</p>
 	</aside>
-	<footer >
-		<p>Directed by:
-			&lt; James Wan &gt;<br>
-		produced by:&lt; New Line Cinema &gt;</p>
+	<footer>
+		Directed by:
+		&lt; James Wan &gt;<br>
+		produced by:&lt; New Line Cinema &gt;
 	</footer>
 	<script type="text/javascript" src="./script.js">
 	</script>
