--- a/main.html
+++ b/main.html
@@ -40,12 +40,12 @@
 
 	</section>
 	<aside>
-		<p>IMDb RATING :
+		IMDb RATING :
 			7.3/10
-		</p>
-		<p>Release date:
+		<br>
+		Release date:
 			June 10, 2016 (United States)
-		</p>
+		
 	</aside>
 	<footer>
 		Directed by:
