--- a/main.html
+++ b/main.html
@@ -20,8 +20,7 @@
 	<summary>
 		In 1977, paranormal investigators Ed and Lorraine Warren travel to London, England, where single mother Peggy
 		Hodgson believes that something evil is in her home. When Peggy's youngest daughter starts showing signs of
-		demonic possession, Ed and Lorraine attempt to help the besieged girl, only to find themselves targeted by
-		the malicious spirits.
+		demonic possession
 	</summary>
 	<section id="actor">
 		Actors: Vera Farmiga as:
