--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 	<nav>
 
 		<a href="#actor" id="nav-actor">Actors</a>
-		<a href="quote" id="nav-quote">quotes</a>
+		<a href="#quote" id="nav-quote">quotes</a>
 	</nav>
 
 	<summary>
@@ -25,11 +25,7 @@
 	<section id="actor">
 		Actors: Vera Farmiga as:
 		Lorraine Warren,Patrick Wilson as:
-		Ed Warren
-
-
-
-	</section>
+		Ed Warren</section>
 	<section id="quote">
 		Movie plot : In 1977, paranormal investigators Ed and Lorraine Warren travel to London, England, where single
 		mother Peggy
@@ -40,14 +36,12 @@
 	</section>
 	<aside>
 		IMDb RATING :
-			7.3/10 star
-		
-		Release date:
-			June 10, 2016 (United States)
-		
+		7.3/10 star & Release date:
+		June 10, 2016 (United States)
+
 	</aside>
 	<footer>
-		
+
 		produced by:&lt; New Line Cinema &gt;
 	</footer>
 	<script type="text/javascript" src="./script.js">
