--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
 
 	</aside>
 	<footer>
-		produced by: &lt; New Line Cinema &gt;
+		Produced by: &lt; New Line Cinema &gt;
 	</footer>
 	<script type="text/javascript" src="./script.js">
 	</script>
